# rk3562deb_dashboard

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: rk-dashboard.service
docs/decisions/: README.md
docs/decisions/adr/: ADR-001-shared-sampler.md  ADR-002-tui-monster-runtime.md  ADR-003-ram-only-history.md  ADR-004-metric-availability-states.md  ADR-005-read-only-first-release.md  ADR-006-no-http-dependency.md  ADR-007-launcher-home.md
docs/decisions/milestones/: M0-baseline.md  M1-tui-shell.md  M2-overview.md  M3-detail-screens.md  M4-packaging.md
rk3562deb_dashboard/: __init__.py  collectors.py  models.py  sampler.py  serialization.py  server.py  wifi.py
rk3562deb_dashboard/collectors/: __init__.py  base.py  cpu.py  host.py  memory.py  network.py  npu.py  power.py  process.py  rockchip.py  storage.py  thermal.py
rk3562deb_dashboard/static/: app.js  index.html  launcher.html  launcher.js  osk.js  styles.css  wifi.html  wifi.js
rk3562deb_dashboard/tui/: __init__.py  app.py  crashlog.py  formatting.py  layout.py  main.py  state.py
rk3562deb_dashboard/tui/screens/: __init__.py  process.py
rk3562deb_dashboard/tui/widgets/: __init__.py  sparkline.py
tests/: test_collectors.py  test_fixtures.py  test_server.py  test_wifi.py
tests/fixtures/: build_fixtures.py
tests/fixtures/healthy_rk3562/proc/: diskstats  loadavg  meminfo  stat  uptime
tests/fixtures/healthy_rk3562/proc/101/: status
tests/fixtures/healthy_rk3562/proc/102/: status
tests/fixtures/healthy_rk3562/proc/103/: status
tests/fixtures/healthy_rk3562/proc/104/: status
tests/fixtures/healthy_rk3562/proc/device-tree/: compatible  model  serial-number
tests/fixtures/healthy_rk3562/proc/net/: dev
tests/fixtures/healthy_rk3562/proc/self/: mountinfo
tests/fixtures/healthy_rk3562/sys/block/mmcblk0/device/: model
tests/fixtures/healthy_rk3562/sys/block/mmcblk1/: size
tests/fixtures/healthy_rk3562/sys/block/mmcblk1/device/: model
tests/fixtures/healthy_rk3562/sys/class/devfreq/fde60000.gpu/: governor
tests/fixtures/healthy_rk3562/sys/class/devfreq/ff300000.npu/: governor  load
tests/fixtures/healthy_rk3562/sys/class/power_supply/battery/: current_now
tests/fixtures/healthy_rk3562/sys/class/power_supply/usb/: status
tests/fixtures/healthy_rk3562/sys/class/regulator/regulator.1/: name
tests/fixtures/healthy_rk3562/sys/class/regulator/regulator.2/: name
tests/fixtures/malformed_metrics/proc/: meminfo  uptime
tests/fixtures/no_npu/proc/: loadavg
tests/fixtures/partial_sysfs/proc/: meminfo
tests/tui/: conftest.py  fake_screen.py  test_compact_render.py  test_crashlog.py  test_keymap.py  test_layout.py  test_overview_render.py  test_process_screen.py  test_sparkline.py  test_unavailable_states.py
(+4 files in other folders)
