[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rk3562deb-dashboard"
version = "0.2.0"
description = "Local btop-inspired dashboard for Debian on RK3562/Rockchip devices"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GeospatialDaryl" }]
keywords = ["rk3562", "rockchip", "debian", "dashboard", "monitoring"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
tui = ["pyTuiMonster @ file:///${PROJECT_ROOT}/../TUI_Monster"]

[project.scripts]
rk-dashboard = "rk3562deb_dashboard.server:main"
rk-tui = "rk3562deb_dashboard.tui.main:main"

[tool.setuptools.packages.find]
include = ["rk3562deb_dashboard*"]

[tool.setuptools.package-data]
rk3562deb_dashboard = ["static/*", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "pyTuiMonster.*"
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "rk3562deb_dashboard.tui.app"
disallow_subclassing_any = false
disallow_untyped_decorators = false
